Add file reading and listing
